added css for header, main, footer

--- a/index.html
+++ b/index.html
@@ -8,13 +8,30 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
-    <div className="container">
-        <div className="header">
-            <h1>Magic Energy Works</h1>
+    <section className="row justify center card-column">
+        <header className="header">
+            <h1 className="t-1"><span role="image" aria-label="magic">✨</span>Magic Energy Works<span role="image" aria-label="magic">✨</span></h1>
+        </header>
+    </section>
+    <main className="row justify-center card-column">
+        <p className="t-2">Welcome to the home of your best guide to inner peace and self-affirmation</p>
+        <p className="t-2">About me : Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </main>
+    <footer>
+        <div>
+            <!-- image: christina's choice on left  -->
         </div>
-        <p>Welcome to the home of your best guide to inner peace and affirmation.</p>
-    </div>
-    
+        <div>
+            <h7>&copy; 2024 Magic Energy Works, LLC</h7>
+        </div>
+        <div>
+             <h7>&copy; 2024 Made with <span role="image" aria-label="magic">✨</span> by Max</h7>
+        </div>
+        <div>
+            <!-- LinkedIn -->
+        </div>
+    </footer>
+
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
