added images folder with images

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <footer>
         <div>
             <!-- image: christina's choice on left  -->
+            <img src="../simple-magic/assets/images/christinaprofile.jpg" alt="over-exposed gorgeous blue-eyed brunette with flowing hair" />
         </div>
         <div>
             <h7>&copy; 2024 Magic Energy Works, LLC</h7>
