--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <section className="row justify center card-column">
-        <header className="header">
+        <header className="row justify center card-column">
+        <div className="header">
             <h1 className="t-1"><span role="image" aria-label="magic">✨</span>Magic Energy Works<span role="image" aria-label="magic">✨</span></h1>
-        </header>
+        </div>
+    </header>
     </section>
     <main className="row justify-center card-column">
         <p className="t-2">Welcome to the home of your best guide to inner peace and self-affirmation</p>
