added cards, improved styling

--- a/index.html
+++ b/index.html
@@ -8,31 +8,55 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
-    <section className="row justify center card-column">
-        <header className="row justify center card-column">
-        <div className="header">
-            <h1 className="t-1"><span role="image" aria-label="magic">✨</span>Magic Energy Works<span role="image" aria-label="magic">✨</span></h1>
-        </div>
-    </header>
+    <section class="row justify-center">
+        <header class="row justify-center">
+            <div>
+                <h1><span role="image" aria-label="magic">✨</span>Magic Energy Works<span role="image" aria-label="magic">✨</span></h1>
+            </div>
+        </header>
     </section>
-    <main className="row justify-center card-column">
-        <p className="t-2">Welcome to the home of your best guide to inner peace and self-affirmation</p>
-        <p className="t-2">About me : Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <main class="row justify-center card-column">
+        <div class="content">
+            <p>Welcome to the home of your best guide to inner peace and self-affirmation</p>
+            <p>About me : Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="content">
+            <p>What I do: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="testimonies">
+            <div class="card">
+                <h3 class="card-header">Courtney</h3>
+                <p>"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            </div>
+            <div class="card">
+                <h3 class="card-header">Rosi</h3>
+                <p>"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            </div>
+            <div class="card">
+                <h3 class="card-header">Max</h3>
+                <p>"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            </div>
+        </div>
+        <div class="content">
+            <button> Email me to schedule an appointment</button>
+            <p>I look forward to working with you!</p>
+        </div>
     </main>
     <footer>
         <div>
-            <!-- image: christina's choice on left  -->
-            <img src="../simple-magic/assets/images/christinaprofile.jpg" alt="over-exposed gorgeous blue-eyed brunette with flowing hair" />
+            <img src="../simple-magic/assets/images/christinaprofile.jpg" alt="over-exposed gorgeous blue-eyed brunette with flowing hair" style="width:auto;height:auto;"/>
         </div>
         <div>
             <h7>&copy; 2024 Magic Energy Works, LLC</h7>
         </div>
         <div>
-             <h7>&copy; 2024 Made with <span role="image" aria-label="magic">✨</span> by Max</h7>
+             <h7>Made with <span role="image" aria-label="magic">✨</span> by <a href="https://www.linkedin.com/in/maximilian-r-e">Max</a></h7>
         </div>
-        <div>
-            <!-- LinkedIn -->
-        </div>
+        <!-- <div>
+            <h7>
+                <a href="https://www.linkedin.com/in/maximilian-r-e">Check Max out on LinkedIn</a>
+            </h7>
+        </div> -->
     </footer>
 
     <script src="./assets/js/script.js"></script>
