added video section with logo

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
-    <section class="row justify-center">
-        <header class="row justify-center">
-            <div>
-                <h1><span role="image" aria-label="magic">✨</span>Magic Energy Works<span role="image" aria-label="magic">✨</span></h1>
+    <!-- <section class="row justify-center"> -->
+        <section>
+        <!-- <header class="row justify-center"> -->
+            <header>
+            <video autoplay muted loop id="oceanVideo">
+                <source src="../simple-magic/assets/video/late-afternoon-sky-ocean-video.mp4" type="video/mp4">
+              </video>
+            <div class="logo">
+                <h1><span role="image" aria-label="magic">✨</span >Magic Energy Works<span role="image" aria-label="magic">✨</span></h1>
             </div>
         </header>
     </section>
