removed borders, changed dark theme to light theme, centered logo in video, updated about me section

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!-- <section class="row justify-center"> -->
         <section>
         <!-- <header class="row justify-center"> -->
-            <header>
             <video autoplay muted loop id="oceanVideo">
                 <source src="../simple-magic/assets/video/late-afternoon-sky-ocean-video.mp4" type="video/mp4">
               </video>
+            <header>
             <div class="logo">
                 <h1><span role="image" aria-label="magic">✨</span >Magic Energy Works<span role="image" aria-label="magic">✨</span></h1>
             </div>
@@ -22,8 +22,9 @@
     </section>
     <main class="row justify-center card-column">
         <div class="content">
-            <p>Welcome to the home of your best guide to inner peace and self-affirmation</p>
-            <p>About me : Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Hello!</p>
+            <p>It's nice to meet youu and thanks for being here. My entire life I have always been drawn to the magic of the universe unknown. The feelings and knowings of our energies and of those from beyond. I remember being a small child and sensing presence, seeing images of adults around me that were unexplainable. Feeling people's energy and experiencing the depths of their energy field. As I grew, I attuned to this gift, letting it guide me through my own trials and tribulations. Healing my own heart through intuitive work led me to the realization that our spiritual self serves as a vehicle to a life filled with abundance, security and love within ourselves. It's an honor to connect with people in times of transition, unknowing or curiosity.
+            </p>
         </div>
         <div class="content">
             <p>What I do: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -42,9 +43,9 @@
                 <p>"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
             </div>
         </div>
-        <div class="content">
-            <button> Email me to schedule an appointment</button>
-            <p>I look forward to working with you!</p>
+        <div class="email-container">
+            <a href="#" class="cta-button">Email me to schedule an appointment</a>
+            <p class="email-headroom">I look forward to working with you!</p>
         </div>
     </main>
     <footer>
