--- a/index.html
+++ b/index.html
@@ -23,11 +23,30 @@
     <main class="row justify-center card-column">
         <div class="content">
             <p>Hello!</p>
-            <p>It's nice to meet youu and thanks for being here. My entire life I have always been drawn to the magic of the universe unknown. The feelings and knowings of our energies and of those from beyond. I remember being a small child and sensing presence, seeing images of adults around me that were unexplainable. Feeling people's energy and experiencing the depths of their energy field. As I grew, I attuned to this gift, letting it guide me through my own trials and tribulations. Healing my own heart through intuitive work led me to the realization that our spiritual self serves as a vehicle to a life filled with abundance, security and love within ourselves. It's an honor to connect with people in times of transition, unknowing or curiosity.
+            <p>It's nice to meet you and thanks for being here. My entire life I have always been drawn to the magic of the universe unknown. The feelings and knowings of our energies and of those from beyond. I remember being a small child and sensing presence, seeing images of adults around me that were unexplainable. Feeling people's energy and experiencing the depths of their energy field. As I grew, I attuned to this gift, letting it guide me through my own trials and tribulations. Healing my own heart through intuitive work led me to the realization that our spiritual self serves as a vehicle to a life filled with abundance, security and love within ourselves. It's an honor to connect with people in times of transition, unknowing or curiosity.
             </p>
         </div>
         <div class="content">
-            <p>What I do: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>First and foremost I am a student; constantly learning and evolving; accessing energy and diving deeper into self. Im also a Yogi, Clairvoyant, Reiki practitioner, and lifelong wonderer. An inquisitive and curious soul, I have never shied away from the mystery and deep inquiry of the self. For as long as I can remember, I’ve been able to feel and sense the different energies around me — a gift that has guided my life and work in profound ways.
+                Through years of meditation practice, yoga trainings, and personal exploration, I’ve affirmed the deep connection within and embraced my intuitive gifts- I truly believe we all have access to this. It’s been my honor to help others walk the path of self-inquiry, healing, and hope, offering grounding connection as the foundation for true transformation. 
+                In addition to exploration with self, I believe food can be a vessel to healing. As a trained natural foods Chef and someone who has struggled with disordered eating my entire life, I think its important to incorporate joy and love in what we eat, while being nutrient dense and filing. I include easy and nourishing meals with my weekly packages to offer ease and enjoyment while you commit to your intentions. I will never promote a diet and truly believe all food is energy. 
+                In my work, I blend intuition, meditation, and practical guidance to facilitate connection and authentic communication with the self and energy beyond. I believe exploration with self isn’t about fixing what’s broken — it’s about returning to the truth of who you are, reconnecting with your inner wisdom, and allowing yourself to fully connect with the tethers that connect us all to the universe and all its capacities.
+                If you’re ready to explore your inner landscape, whether it be inquiry to a specific question or path or to go deeper and release what no longer serves you, and step into your fullest, most authentic self, I’m here to hold space for your journey- whatever that may mean to you. </p>
+        </div>
+        <div class="content">
+            <p>Offerings</p>
+            <p>30 minute exploration call: Sliding Scale of $55-85</p>
+            <p>60 minute deep dive call: Sliding Scale of $95-140</p>
+            <p>Release and Renew Package: $500 for 1 week commitment</p>
+            <p>What's Included?</p>
+            <p>Day 1: Kickoff Session (60min call)- Introduction to goals/theme. Set intentions and identify areas of focus. Reiki and Opening Ritual. Nourishing Dinner recipe.</p>
+            <p>Day 2: Guided Meditation and Journaling prompt as well as self care homework.</p>
+            <p>Day 3: Ritual for Release (30 min call) with breath work and tea ceremony.</p>
+            <p>Day 4: Rest and Integration: Gentle Check in via text or email. Self care and nourishing practice and dinner recipe.</p>
+            <p> Day 5: Reiki Healing and Check-In call: Follow up insight, reiki healing and energy exercise.</p>
+            <p>Day 6: Renew and Rebuild: Tailored affirmations and practices. Journal Prompt and guided meditation.</p>
+            <p>Day 7: Closing Ceremony (60min): Reflection and integration, Cocoa Ceremony, Gratitude practice and final affirmation.</p>
+            <p> Included: Ceremonial Tea and Cocoa, Recipe book</p>
         </div>
         <div class="testimonies">
             <div class="card">
