Email button is christina@magicenergyworks.com

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
             </div>
         </div>
         <div class="email-container">
-            <a href="#" class="cta-button">Email me to schedule an appointment</a>
+            <a href="mailto:christina@magicenergyworks.com?subject=Appointment%20Request&body=Hi%2C%20I%20would%20like%20to%20schedule%20an%20appointment." class="cta-button">
+    Email me to schedule an appointment
+</a>
             <p class="email-headroom">I look forward to working with you!</p>
         </div>
     </main>
